SigmaCodebackup3rdSep/objects/Product_Order_Price_Book__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_Quantity__c</fullName>
        <label>Allocated Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocation_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocation Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Per_Interval__c</fullName>
        <label>Amount Per Interval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_without_discount__c</fullName>
        <formula>Rental_Net_Amount_per_Unit__c *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount without discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Back_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Interval__c</fullName>
        <label>Billing Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPM__c</fullName>
        <label>CPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Euro__c</fullName>
        <label>Cost Euro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerNumber__c</fullName>
        <description>Used For Payment Mobile Point of Sales.</description>
        <label>CustomerNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account(Customer SF ID will be stored)</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Product_Order_Price_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivary_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delivered Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Euro__c</fullName>
        <label>Discount Euro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discounts__c</fullName>
        <label>Discount(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Progress_In_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Progress In Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Release_Comment__c</fullName>
        <description>Reason for Inventory Release</description>
        <label>Inventory Release Comment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Status__c</fullName>
        <label>Inventory Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Reserve</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Un Reserved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsInventoryUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Credit_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Credit Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Inventory_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check Box used to check whether Inventory is Released Or not</description>
        <label>Is Inventory Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Level_Discount_Euro__c</fullName>
        <label>Location Level Discount Euro</label>
        <summarizedField>OrderLineLocation__c.Location_Discount_Euro__c</summarizedField>
        <summaryForeignKey>OrderLineLocation__c.Order_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location_Level_Discount__c</fullName>
        <label>Location Level Discount</label>
        <summarizedField>OrderLineLocation__c.Location_Discount__c</summarizedField>
        <summaryForeignKey>OrderLineLocation__c.Order_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Lines (Location)</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MagentoOrderId__c</fullName>
        <label>MagentoOrderId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Product_Order_Price_Books1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Quantity__c</fullName>
        <label>Line Item Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderSoupEntryId__c</fullName>
        <label>OrderSoupEntryId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <label>Order Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Order Confirmed</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Request for cancel</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Packaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>Product_Order_Price_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordered_Amount__c</fullName>
        <label>Ordered Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ordered_Quantity__c</fullName>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaged_Quantity__c</fullName>
        <label>Packaged Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Product_Order_Price_Books2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartialPackQuantCompare__c</fullName>
        <formula>IF(Packaged_Quantity__c !=Quantity__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PartialPackQuantCompare</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picking_Slip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Picking Slip</label>
        <referenceTo>Picking_Slip__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product_Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Duration__c</fullName>
        <label>Product Warranty Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Interval__c</fullName>
        <label>Product Warranty Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Warranty_End_Date__c</fullName>
        <label>Product Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Warranty_Start_Date__c</fullName>
        <label>Product Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Qty_For_Package__c</fullName>
        <formula>Net_Quantity__c-Packaged_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Qty For Package</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Qty_To_Package__c</fullName>
        <label>Remaining Qty To Package</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Due_Date__c</fullName>
        <label>Rental Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rental_Net_Amount_per_Unit__c</fullName>
        <formula>IF(ISPICKVAL( Billing_Interval__c , &quot;Hour&quot;), (Total_Rental_Days__c * (Amount_Per_Interval__c * 24)), 
IF(ISPICKVAL( Billing_Interval__c , &quot;Day&quot;), (Total_Rental_Days__c * Amount_Per_Interval__c) , 
IF(ISPICKVAL( Billing_Interval__c , &quot;Week&quot;), ((Total_Rental_Days__c  / 7 )* Amount_Per_Interval__c) , 
IF(ISPICKVAL( Billing_Interval__c , &quot;Month&quot;), ((Total_Rental_Days__c  / 30 ) * Amount_Per_Interval__c), 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rental Net Amount per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Return_Date__c</fullName>
        <label>Rental Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rental_Start_Date__c</fullName>
        <label>Rental Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rental_Status__c</fullName>
        <label>Rental Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In house</fullName>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
                <value>
                    <fullName>Rented</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_Product_Name__c</fullName>
        <label>Selected_Product_Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Duration__c</fullName>
        <label>Service Warranty Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>Service Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Intervals__c</fullName>
        <label>Service Warranty Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <label>Service Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipped Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <label>Sigma Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Splited_Order_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Splited Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stock_Fulfilled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Stock Fulfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>tax_amount__c  +   TotalPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Location_Discount__c</fullName>
        <label>Sum Location Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Amount1__c</fullName>
        <formula>Total_Price__c  *  Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>Tax_Code__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProductPrice__c</fullName>
        <formula>Total_Price__c  * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalProductPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Used For Mobile Point Of Sales</description>
        <label>Unit Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Order_Amount__c</fullName>
        <label>Total Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Rental_Days__c</fullName>
        <formula>Rental_Return_Date__c -Rental_Start_Date__c</formula>
        <label>Total Rental Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Under_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Related warranty option</description>
        <inlineHelpText>Check this if the Product/Service comes under warranty</inlineHelpText>
        <label>Under Warranty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <formula>Sigma_Order__r.AccountId__r.Name</formula>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warranty Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Duration_Unit__c</fullName>
        <description>Related to  warranty duration unit</description>
        <inlineHelpText>Select  warranty duration unit</inlineHelpText>
        <label>Warranty Duration Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Duration__c</fullName>
        <description>Related to  warranty duration</description>
        <inlineHelpText>Select  warranty duration</inlineHelpText>
        <label>Warranty Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>4.5</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>5.5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>7.5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>8.5</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>9.5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_End_Date__c</fullName>
        <description>Related to warranty start date</description>
        <inlineHelpText>Choose warranty end date</inlineHelpText>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Start_Date__c</fullName>
        <description>Related to warranty start date</description>
        <inlineHelpText>Choose warranty start date</inlineHelpText>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Order_Lines__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Lines</label>
        <referenceTo>Work_Oder_Lines__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>soupEntryId__c</fullName>
        <label>soupEntryId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tax_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order Line</label>
    <nameField>
        <displayFormat>POPB-{0000}</displayFormat>
        <label>Product Order Price Book Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_Return</fullName>
        <active>false</active>
        <description>To restrict return before package and shipment</description>
        <errorConditionFormula>!AND( Delivered_Quantity__c ==  Quantity__c , ISPICKVAL( Order_Status__c , &quot;Returned&quot; ))</errorConditionFormula>
        <errorMessage>You cannot Return the product before shipment.</errorMessage>
    </validationRules>
</CustomObject>